SERVER-83443 Validate metadata of pipeline before splitting (#18555)

GitOrigin-RevId: ef14960b0a714e16cd381b1dd8dd5d8a5e22fefc